samples/_failures_safe/1761260603_a5ecf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fbfd0c4.c: In function ‘main’:
./samples/SAFE/__tmp_1fbfd0c4.c:151:12: error: expected ‘)’ at end of input
  151 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_1fbfd0c4.c:151:5: error: expected declaration or statement at end of input
  151 |     if (len
      |     ^~
